# Grid-cast

./: .gitignore  README.md  dbt_project.yml  pyproject.toml  requirements-dbt.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
airflow/dags/: build_silver_features.py  ingest_hourly_grid_data.py  score_and_publish_forecasts.py  train_and_evaluate_models.py
api/app/: main.py
dbt/models/: sources.yml
dbt/models/marts/: fct_forecast_model_performance.sql  fct_forecast_quality.sql  fct_grid_risk_windows.sql  schema.yml
dbt/models/staging/: schema.yml  stg_load_weather_hourly.sql
dbt/profiles/: profiles.yml.example
docs/: github_secrets_setup.md
infra/athena/ddl/: bronze.caiso_load_raw.sql  bronze.eia_region_load_raw.sql  bronze.noaa_weather_raw.sql  gold.forecast_hourly.sql  gold.forecast_metrics_daily.sql  gold.grid_risk_events.sql  ops.pipeline_run_audit.sql  silver.load_weather_hourly.sql
schemas/: bronze.yml  gold.yml  silver.yml
scripts/: bootstrap_terraform_env.py  check_dag_imports.py  generate_test_fixtures.py  render_dbt_profile.py
src/gridcast/: __init__.py  config.py
src/gridcast/catalog/: __init__.py  ddl_generator.py  generate_athena_ddl.py
src/gridcast/data/: __init__.py
src/gridcast/features/: __init__.py  build_features.py
tests/: conftest.py  test_dag_imports_script.py  test_ddl_generator.py  test_eia_source.py  test_features.py  test_jobs.py  test_modeling.py  test_pipeline_integration.py  test_terraform_bootstrap_script.py
tests/fixtures/: load_hourly_snapshot.csv  weather_hourly_snapshot.csv
(+39 files in other folders)
