[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gridcast"
version = "0.1.0"
description = "GridCast energy load forecasting MVP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas==2.2.2",
  "numpy==1.26.4",
  "requests==2.32.3",
  "python-dateutil==2.9.0.post0",
  "scikit-learn==1.5.1",
  "pyarrow==17.0.0",
  "fastapi==0.115.0",
  "uvicorn==0.30.6"
]

[project.optional-dependencies]
dev = ["pytest==8.3.2"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

